Align second code on canImportFromPACS